include FPID in datalayer for webSDK

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,8 @@
             window.digitalData.events = window.digitalData.events || [];
             window.digitalData.user = window.digitalData.user || {}
             window.digitalData.user.loggedInStatus = "guest"
-            window.digitalData.usr.fpid = getCookie("FPID")
+            window.digitalData.user.fpid = getCookie("FPID")
+            console.log('cookie_set');
         </script>    
     </head>  
 <body>
