background color updated

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,11 @@
     <head>
         <title> FPID Testing</title>
         <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-        
+        <style>
+            body {
+            background-color: #daa2fb;
+            }
+        </style>
         <script>
             function getCookie(cname) {
             let name = cname + "=";
