--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,11 @@
 <head>
     <title> FPID Testing</title>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    <style>
+        body {
+        background-color: #b4fba2;
+        }
+    </style>
     <script>
             function getCookie(cname) {
             let name = cname + "=";
